# parallel_programming

./: .gitignore
k_means/: CMakeLists.txt  tests.py
k_means/framework/: implementation.hpp  test.cpp  try.hpp
k_means/serial/: CMakeLists.txt  implementation.hpp  k-means.cpp  test.cpp
k_means/tests/: CMakeLists.txt  sample_test.cpp
levenstein/: readme.md
levenstein/framework/: CMakeLists.txt  Makefile  dalibor_implementation.hpp  implementation.hpp  my_main.cpp  tests.cpp
levenstein/serial/: Makefile  dummy_levenstein.hpp  implementation.hpp  levenshtein.cpp
matrix_multiplication/: CMakeLists.txt  FlatMatrix.hpp  Makefile  MatrixReader.cpp  MatrixReader.hpp  common.cpp  common.hpp  exception.hpp  main.cpp  master.cpp  master.hpp  stopwatch.hpp  test.py  unit_tests.cpp  worker.cpp  worker.hpp
matrix_multiplication/exec/: multiply
matrix_transposition/: CMakeLists.txt  Makefile  tbb-matrix-tran.cpp  try.cpp  try.hpp
omp/matrix-mul/: Makefile
omp/minimum/: Makefile
potential/src/: CMakeLists.txt  Makefile  implementation.hpp  kernels.cu  kernels.h  my_try.cpp  try.cpp
potential/src/internal/: serial.hpp  verifier.hpp
